added k8 secrets, edited some setup docs